--- a/BeamWallet/ViewControllers/Login/OpenWalletProgressViewController.xib
+++ b/BeamWallet/ViewControllers/Login/OpenWalletProgressViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,16 +37,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-fL-4oD">
-                    <rect key="frame" x="52" y="300.5" width="310" height="175.5"/>
+                    <rect key="frame" x="52" y="300.5" width="310" height="175"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="tiL-BA-jJU">
-                            <rect key="frame" x="76" y="0.0" width="158" height="90"/>
+                            <rect key="frame" x="75.5" y="0.0" width="159" height="90"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="90" id="cWg-aA-m4p"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creating wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqN-A1-TIj">
-                            <rect key="frame" x="93.5" y="120" width="123.5" height="21.5"/>
+                            <rect key="frame" x="95" y="120" width="120" height="21"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="18"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -55,7 +56,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptl-BF-NdL">
-                            <rect key="frame" x="155" y="156.5" width="0.0" height="0.0"/>
+                            <rect key="frame" x="155" y="156" width="0.0" height="0.0"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                             <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -64,7 +65,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YX2-nC-HFt">
-                            <rect key="frame" x="28.5" y="171.5" width="253" height="4"/>
+                            <rect key="frame" x="28.5" y="171" width="253" height="4"/>
                             <subviews>
                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bZD-dB-5UV">
                                     <rect key="frame" x="-2" y="0.0" width="257" height="4"/>
@@ -93,7 +94,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzy-Nw-Qka">
-                            <rect key="frame" x="0.0" y="175.5" width="310" height="0.0"/>
+                            <rect key="frame" x="0.0" y="175" width="310" height="0.0"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
                             <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -102,7 +103,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOp-KF-vke">
-                            <rect key="frame" x="-86.5" y="175.5" width="483" height="0.0"/>
+                            <rect key="frame" x="-101" y="175" width="512" height="0.0"/>
                             <string key="text">Only the wallet balance (UTXO) can be restored,  transaction info is always private
 and never kept in the blockchain.</string>
                             <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
@@ -142,7 +143,7 @@ and never kept in the blockchain.</string>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GU4-Iw-o1B">
-                    <rect key="frame" x="179.5" y="837.5" width="55.5" height="14.5"/>
+                    <rect key="frame" x="177.5" y="838" width="59.5" height="14"/>
                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -151,6 +152,7 @@ and never kept in the blockchain.</string>
                     </userDefinedRuntimeAttributes>
                 </label>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="GU4-Iw-o1B" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="CPd-MX-fS5"/>
@@ -160,12 +162,16 @@ and never kept in the blockchain.</string>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FIX-uE-nue" secondAttribute="bottom" constant="80" id="bS7-Oc-rWf"/>
                 <constraint firstItem="Pob-fL-4oD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tcF-90-2XT"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="139" y="120"/>
         </view>
     </objects>
+    <designables>
+        <designable name="FIX-uE-nue">
+            <size key="intrinsicContentSize" width="73" height="17"/>
+        </designable>
+    </designables>
     <resources>
         <image name="iconCancel" width="12" height="12"/>
-        <image name="logo" width="158" height="142"/>
+        <image name="logo" width="159" height="139"/>
     </resources>
 </document>
