--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/BMSearchAddressCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/BMSearchAddressCell.xib
@@ -50,13 +50,13 @@
                                 <rect key="frame" x="15" y="32" width="249" height="132.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvg-Ua-T50">
-                                        <rect key="frame" x="0.0" y="0.0" width="249" height="71"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="249" height="82"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Hvw-FB-c0R">
-                                                <rect key="frame" x="0.0" y="0.0" width="249" height="71"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="249" height="82"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Wna-Zc-MZ6" customClass="BMTextView" customModule="BeamWallet" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="249" height="46.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="249" height="57.5"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
@@ -71,7 +71,7 @@
                                                         </connections>
                                                     </textView>
                                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TNv-Qh-fC8">
-                                                        <rect key="frame" x="0.0" y="49" width="249" height="0.0"/>
+                                                        <rect key="frame" x="0.0" y="60" width="249" height="0.0"/>
                                                         <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
                                                         <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -80,9 +80,18 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWr-4F-fIw">
-                                                        <rect key="frame" x="0.0" y="51.5" width="249" height="19.5"/>
+                                                        <rect key="frame" x="0.0" y="62.5" width="249" height="19.5"/>
                                                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                                                         <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </label>
+                                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8x-j5-7ZV">
+                                                        <rect key="frame" x="0.0" y="82" width="249" height="0.0"/>
+                                                        <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="14"/>
+                                                        <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
@@ -100,7 +109,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MXg-eU-YPc">
-                                        <rect key="frame" x="0.0" y="76" width="249" height="56.5"/>
+                                        <rect key="frame" x="0.0" y="87" width="249" height="45.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJf-ey-lGU">
                                                 <rect key="frame" x="0.0" y="0.0" width="16" height="20"/>
@@ -200,6 +209,7 @@
             <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <connections>
                 <outlet property="additionalErrorLabel" destination="TNv-Qh-fC8" id="bRK-ga-Kkq"/>
+                <outlet property="addressTypeLabel" destination="r8x-j5-7ZV" id="CtX-nx-skE"/>
                 <outlet property="contactCategory" destination="KvQ-Du-29Z" id="TgC-Oh-vZ2"/>
                 <outlet property="contactName" destination="V79-mi-3wI" id="qTh-z3-HF1"/>
                 <outlet property="contactView" destination="MXg-eU-YPc" id="Xis-Di-r1o"/>
